kyy-k8s-config/dev/app/frontend/fe-tiku-new-pc/fe-tiku-new-pc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose-darwin-amd64 convert -f fe-tiku-pc.yaml
    kompose.version: 1.17.0 (70e82c92)
  labels:
    app: fe-tiku-pc
  name: fe-tiku-pc
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: fe-tiku-pc
