kyy-k8s-config/dev/app/frontend/fe-tiku-new-pc/fe-tiku-new-pc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: fe-tiku-pc
  name: fe-tiku-pc
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "zckjpx.kuaixuezaixian.com,caishidian.kuaixuezaixian.com"
spec:
  rules:
    - host: "www.kuaixuezaixian.com"
      http:
        paths:
          - backend:
              serviceName: fe-tiku-pc
              servicePort: 80
            path: /tiku/pc/
